# ray-tracer-challenge-rust

./: .gitignore  Cargo.toml  README.md  default_world.json  start.sh
chapter_16/: Cargo.toml  default_world.json
chapter_16/examples/animation/: Cargo.toml
chapter_16/examples/animation/src/: main.rs  render.rs
chapter_16/src/: camera.rs  canvas.rs  color.rs  light.rs  matrix.rs  point.rs  vector.rs  world.rs
chapter_16/src/patterns/: pattern.rs  ring.rs  stripe.rs
chapter_16/src/shapes/: cone.rs  csg.rs  cube.rs  group.rs  plane.rs  shape.rs  test_shape.rs
examples/show_render/src/: elapsed.rs  form_fields.rs  main.rs  new_world.rs  render.rs  show.rs  view.rs
src/: camera.rs  color.rs  light.rs  material.rs  matrix.rs  point.rs  vector.rs  world.rs
src/patterns/: checkers.rs  gradient.rs  pattern.rs  ring.rs  stripe.rs  test_pattern.rs
src/shapes/: cone.rs  csg.rs  cube.rs  cylinder.rs  group.rs  plane.rs  shape.rs  sphere.rs  test_shape.rs  triangle.rs
