[package]
name = "rustic_ray"
version = "0.1.0"
authors = ["Guy"]
edition = "2018"

[[example]]
name = "show_render"
path = "examples/show_render/src/main.rs"

[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1"

[dev-dependencies]
clap = "3.0.0-beta.2"
image = "0.23.12"
macroquad = "0.3.0-alpha.14"
megaui-macroquad = "0.1.3"